# paper-soccer-strategy-engine

./: .gitignore  CMakeLists.txt  README.md
include/papersoccer/: bot.hpp  debug.hpp  geometry.hpp  rules.hpp  types.hpp
src/: bot.cpp  debug.cpp  geometry.cpp  rules.cpp
src/cli/: main.cpp
tests/: bot_test.cpp  rules_test.cpp  test_main.cpp
